--- a/css/sortegram.css
+++ b/css/sortegram.css
@@ -1,12 +1,13 @@
 
 body {
   font-family: Segoe UI;
-  background: #D8ECFF;
+  background: #FFF;
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   -o-user-select: none;
+  margin: 0;
 }
 
 input {
@@ -14,8 +15,7 @@ input {
 }
 
 #cover {
-  background-color: #000;
-  background-image: url('../img/bg.jpg');
+  background-color: #28FF00;
   background-size: auto 100%;
   background-position: 50%;
   background-repeat: no-repeat;
@@ -34,7 +34,6 @@ input {
   max-width: 100%;
   text-align: center;
   position: fixed;
-  top: 50px;
   transition: .2s ease;
   -webkit-transition: .2s ease;
   -moz-transition: .2s ease;
@@ -52,14 +51,14 @@ input {
 
 #classic-raffle {
   background-image: url(../img/appbar.sort.numeric.png);
-  background-size: 60%;
+  background-size: 80%;
   background-position: 50% 1%;
   background-repeat: no-repeat;
   background-color: #0B733D;
   width: 140px;
-  height: 130px;
+  height: 140px;
   position: relative;
-    top: 25%;
+    top: 30%;
     left: 50%;
   transform: translate(-50%,-50%);
   -webkit-transform: translate(-50%,-50%);
@@ -109,20 +108,15 @@ input {
 }
 
 #navbar {
-  background-color: #FFF;
+  background-color: transparent;
   width: 100%;
   height: 50px;
-  position: fixed;
+  position: absolute;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   top: 0;
   left: 0;
-  box-shadow: 0 0 20px #000;
-  -webkit-box-shadow: 0 0 20px #000;
-  -moz-box-shadow: 0 0 20px #000;
-  -ms-box-shadow: 0 0 20px #000;
-  -o-box-shadow: 0 0 20px #000;
   z-index: 1;
 }
 
@@ -130,10 +124,10 @@ input {
   font-size: 24pt;
     font-family: Segoe UI Light, Segoe UI, sans-serif;
     text-align: right;
-    color: #00A90E;
+    color: #fff;
     width: 265px;
     height: 50px;
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 5px;
     transition: 1s ease;
@@ -207,7 +201,7 @@ input {
 }
 
 #navbar-ops-btn {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0);
   background-image: url('../img/appbar.lines.horizontal.4-2.png');
   background-size: 100% auto;
   background-position: 50%;
@@ -215,7 +209,7 @@ input {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
 }
@@ -233,7 +227,7 @@ input {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 3;
@@ -243,11 +237,10 @@ input {
 }
 
 #sidebar {
-  position: fixed;
-    top: 50px;
+  position: absolute;
   background-color: rgba(0, 0, 0, 0.9);
   color: #fff;
-  width: 60%;
+  width: 50%;
   height: 100%;
   box-shadow: 1px 0px 0px #000;
   -webkit-box-shadow: 1px 0px 0px #000;
@@ -259,11 +252,11 @@ input {
   -moz-transition: .2s ease;
   -ms-transition: .2s ease;
   -o-transition: .2s ease;
-  z-index: 2;
+  z-index: 0;
 }
 #sidebar-overlay {
   display: none;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(0, 64, 51, 0.7);
   width: 170%;
   height: 100%;
   position: fixed;
@@ -272,6 +265,9 @@ input {
   z-index: 0;
 }
 
+.sidebar-ops {
+  margin-top: 50px;
+}
 .sidebar-op {
   transition: .2s ease;
   -webkit-transition: .2s ease;
@@ -333,7 +329,7 @@ input {
 }
 
 #sortegram {
-  background-color: rgba(84, 84, 84, 0.76);
+  background-color: rgba(84,84,84,0.7);
   color: #fff;
   width: 100%;
   max-width: 100%;
@@ -348,7 +344,6 @@ input {
   margin-left: 0px;
   padding: 0px;
   padding-top: 70px;
-  padding-bottom: 20px;
   transition: .2s ease;
   -webkit-transition: .2s ease;
   -moz-transition: .2s ease;
@@ -357,6 +352,29 @@ input {
   z-index: -1;
 }
 
+#start-sortegram {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  width: 100%;
+  max-width: 100%;
+  min-height: calc(100% - 70px);
+  min-height: -webkit-calc(100% - 70px);
+  min-height: -moz-calc(100% - 70px);
+  min-height: -ms-calc(100% - 70px);
+  min-height: -o-calc(100% - 70px);
+  text-align: center;
+  position: absolute;
+  top: 0;
+  margin-left: 0px;
+  padding: 0px;
+  padding-top: 70px;
+  transition: .2s ease;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -ms-transition: .2s ease;
+  -o-transition: .2s ease;
+  z-index: -1;
+}
 .min-max {
   text-align: center;
   width: 100%;
@@ -389,7 +407,12 @@ input {
 .input-min-max:focus {
     background-color: rgba(26, 90, 125, 0.73);
     border: 2px solid #FFFFFF;
-    }
+}
+.input-min-max:disabled {
+    background-color: rgba(162, 218, 163, 0.8);
+    color: #717171;
+    border: 2px solid #868686;
+}
 
 .sort-btn {
   position: relative;
@@ -431,7 +454,7 @@ input {
     border: 5px solid transparent;
 }
 
-.SCnew-btn {
+.new-btn {
   position: relative;
     bottom: 0%;
     left: 0%;
@@ -447,7 +470,7 @@ input {
     -o-transition: .1s ease;
     outline: none;
 }
-.SCnew-btn:active {
+.new-btn:active {
     background-color: #5181AF;
     border: 5px solid #5181AF;
     color: #D6D6D6;
@@ -457,12 +480,12 @@ input {
     -ms-transform: scale(.9);
     -o-transform: scale(.9);
 }
-.SCnew-btn:focus {
+.new-btn:focus {
     background-color: #5181AF;
     border: 5px solid #5181AF;
     color: #D6D6D6;
 }
-.SCnew-btn:disabled {
+.new-btn:disabled {
     background: #D9D9D9;
     color: rgb(117, 117, 117);
     text-shadow: 1px 1px 0px #FFF;
@@ -487,6 +510,31 @@ input {
   border-top: 3px solid #fff;
   border-bottom: 3px solid #fff;
   word-wrap: break-word;
+}
+
+#SSresult {
+  background-color: rgba(236, 248, 255, 0.5);
+  color: #FFFFFF;
+  box-shadow: 0 7px 15px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 7px 15px rgba(0, 0, 0, 0.23);
+  -moz-box-shadow: 0 7px 15px rgba(0, 0, 0, 0.23);
+  -ms-box-shadow: 0 7px 15px rgba(0, 0, 0, 0.23);
+  -o-box-shadow: 0 7px 15px rgba(0, 0, 0, 0.23);
+  font-size: 30pt;
+  text-align: center;
+  padding: 10px;
+  width: 100%;
+  max-width: calc(100% - 16px);
+  height: auto;
+  min-height: 50px;
+  border-top: 3px solid #fff;
+  border-bottom: 3px solid #fff;
+  word-wrap: break-word;
+  transition: 1s ease;
+  -webkit-transition: 1s ease;
+  -moz-transition: 1s ease;
+  -ms-transition: 1s ease;
+  -o-transition: 1s ease;
 }
 
 .result-rotate {
@@ -522,11 +570,11 @@ input {
   padding: 0 0 0 10px;
     max-width: 60%;
     height: 45px;
-    color: #6CFEFF;
+    color: #FFF;
     font-size: 14pt;
     background: transparent;
-    border: 3px solid #fff;
-    border-top: 0;
+    border: 0;
+    border-bottom: 4px solid #fff;
 }
 
 #input-username-lbl {
@@ -534,13 +582,56 @@ input {
     font-size: 10pt;
 }
 
+.error-shake {
+  animation: error-shake 0.5s;
+  -webkit-animation: error-shake 0.5s;
+  -moz-animation: error-shake 0.5s;
+  -ms-animation: error-shake 0.5s;
+  -o-animation: error-shake 0.5s;
+}
+
+@keyframes error-shake {
+  0% {margin-left: -20px;}
+  20% {margin-left: 20px;}
+  40% {margin-left: -20px;}
+  80% {margin-left: 20px;}
+  100% {margin-left: 0px;}
+}
+@-webkit-keyframes error-shake {
+  0% {margin-left: -20px;}
+  20% {margin-left: 20px;}
+  40% {margin-left: -20px;}
+  80% {margin-left: 20px;}
+  100% {margin-left: 0px;}
+}
+@-moz-keyframes error-shake {
+  0% {margin-left: -20px;}
+  20% {margin-left: 20px;}
+  40% {margin-left: -20px;}
+  80% {margin-left: 20px;}
+  100% {margin-left: 0px;}
+}
+@-ms-keyframes error-shake {
+  0% {margin-left: -20px;}
+  20% {margin-left: 20px;}
+  40% {margin-left: -20px;}
+  80% {margin-left: 20px;}
+  100% {margin-left: 0px;}
+}
+@-o-keyframes error-shake {
+  0% {margin-left: -20px;}
+  20% {margin-left: 20px;}
+  40% {margin-left: -20px;}
+  80% {margin-left: 20px;}
+  100% {margin-left: 0px;}
+}
+
 .input-username-btn {
   width: 45px;
-  height: 48px;
+  height: 46px;
     margin-left: -5px;
-  border-radius: 0 30% 50% 0;
-  border: 3px solid #fff;
-  border-left: none;
+  border: 0;
+    border-bottom: 4px solid #fff;
   background-color: rgba(27, 197, 57, 0);
     background-image: url(../img/appbar.add.png);
     background-size: 90%;
@@ -552,9 +643,8 @@ input {
   -ms-transition: .1s ease;
   -o-transition: .1s ease;
 }
-.input-username-btn:active {
-  border: 3px solid #00FFFC;
-  border-left: none;
+.input-username-btn:active, .input-username-btn:hover {
+  background-color: #1BC539;
   }
 
 #user-names {
@@ -564,7 +654,6 @@ input {
   text-align: left;
   width: 100%;
   max-height: 170px;
-  border-bottom: 1px solid #fff;
   overflow-y: auto;
   transition: .2s ease;
   -webkit-transition: .2s ease;
@@ -575,12 +664,11 @@ input {
 
 #user-names dt {
   background-color: rgba(0, 0, 0, 0.2);
-  color: #96F7F3;
+  color: #fff;
   text-align: left;
   border-bottom: 1px solid #D4D4D4;
   padding-top: 15px;
   padding-left: 4px;
-  margin-bottom: 4px;
   width: 98%;
   height: 30px;
   transition: .2s ease;
@@ -593,7 +681,49 @@ input {
 #user-names dt:before {
 	content: counter(user-luck-number);
 	counter-increment: user-luck-number;
+  color: #B5B5B5;
+  padding-right: 50px;
+  padding-top: 4px;
+  float: left;
+  padding-bottom: 16px;
+  font-size: 11pt;
+}
+
+#user-names-2 {
+  counter-reset: user-luck-number;
+  line-height: .2;
+  text-align: left;
+  position: relative;
+  width: 100%;
+  max-height: 170px;
+  overflow-y: hidden;
+  transition: .2s ease;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -ms-transition: .2s ease;
+  -o-transition: .2s ease;
+}
+
+#user-names-2 dt {
+  background-color: rgba(0, 0, 0, 0.2);
   color: #fff;
+  text-align: left;
+  border-bottom: 1px solid #D4D4D4;
+  padding-top: 15px;
+  padding-left: 4px;
+  width: 98%;
+  height: 30px;
+  transition: .2s ease;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -ms-transition: .2s ease;
+  -o-transition: .2s ease;
+}
+
+#user-names-2 dt:before {
+  content: counter(user-luck-number);
+  counter-increment: user-luck-number;
+  color: #B5B5B5;
   padding-right: 50px;
   padding-top: 4px;
   float: left;
@@ -606,13 +736,18 @@ input {
   font-size: 14pt;
 }
 
+#number-of-participants-2 {
+  color: #99FFFB;
+  font-size: 14pt;
+}
+
 #delete-all {
   font-size: 12pt;
   color: #fff;
   border: 0;
   height: 60px;
   width: 45%;
-  background-color: rgba(255,69,69,0.5);
+  background-color: #FF6666;
 }
 #delete-all:active {
     transform: scale(.9);
@@ -623,7 +758,7 @@ input {
 }
 
 .delete-user {
-  background-color: rgba(255, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   background-image: url(../img/appbar.delete.png);
   background-size: 130%;
   background-position: 50%;
@@ -648,26 +783,26 @@ input {
     -o-transform: scale(.9);
 }
 
-.sg-save {
+#sg-save {
   padding: 10px;
   font-size: 16pt;
   text-align: right;
   color: #fff;
   border: 0;
-  background-color: rgba(0, 255, 90, 0.5);
+  background-color: #0EBD00;
   background-image: url(../img/ic_done_white_24dp_2x.png);
-  background-size: auto 100%;
+  background-size: auto 80%;
   background-position: 10%;
   background-repeat: no-repeat;
   width: 45%;
-  height: 60px;
+  height: 66px;
   transition: .1s ease;
   -webkit-transition: .1s ease;
   -moz-transition: .1s ease;
   -ms-transition: .1s ease;
   -o-transition: .1s ease;
 }
-.sg-save:active {
+#sg-save:active {
     background-color: #5181AF;
     color: #D6D6D6;
     transform: scale(.9);
