--- a/css/sortegram.css
+++ b/css/sortegram.css
@@ -1,5 +1,5 @@
 
-body {
+body, html {
   font-family: Segoe UI;
   background: #FFF;
   user-select: none;
@@ -9,6 +9,22 @@ body {
   -o-user-select: none;
   margin: 0;
   overflow-x: hidden;
+  max-height: 100%;
+}
+
+.preload-images {
+  display: none;
+  width: 0;
+  height: 0;
+  background: url(../appbar.add.png),
+              url(../appbar.close.png),
+              url(../appbar.delete.png),
+              url(../appbar.lines.horizontal.4-2.png),
+              url(../appbar.save.png),
+              url(../appbar.sort.numeric.png),
+              url(../appbar.trophy.svg),
+              url(../ic_arrow_forward_white_24dp_2x.png),
+              url(../ic_done_white_24dp_1x.png);
 }
 
 input {
@@ -16,7 +32,7 @@ input {
 }
 
 #cover {
-  background-color: #28FF00;
+  background-color: #148000;
   background-size: auto 100%;
   background-position: 50%;
   background-repeat: no-repeat;
@@ -25,22 +41,58 @@ input {
   position: fixed;
   top: 0;
   left: 0;
+  transition: .4s ease;
+  -webkit-transition: .4s ease;
+  -moz-transition: .4s ease;
+  -ms-transition: .4s ease;
+  -o-transition: .4s ease;
   z-index: -3;
 }
 
-#start {
-  background-color: rgba(0,62,38,0.8);
+#home {
+  background-color: transparent;
   width: 100%;
   height: 100%;
   max-width: 100%;
   text-align: center;
   position: fixed;
+  box-shadow: 0px 0px 20px #000;
+  -webkit-box-shadow: 0px 0px 20px #000;
+  -moz-box-shadow: 0px 0px 20px #000;
+  -ms-box-shadow: 0px 0px 20px #000;
+  -o-box-shadow: 0px 0px 20px #000;
   transition: .2s ease;
   -webkit-transition: .2s ease;
   -moz-transition: .2s ease;
   -ms-transition: .2s ease;
   -o-transition: .2s ease;
   z-index: -1;
+}
+
+#start {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  text-align: center;
+  position: fixed;
+  transition: .2s ease;
+  box-shadow: 0px 0px 20px #000;
+  -webkit-box-shadow: 0px 0px 20px #000;
+  -moz-box-shadow: 0px 0px 20px #000;
+  -ms-box-shadow: 0px 0px 20px #000;
+  -o-box-shadow: 0px 0px 20px #000;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -ms-transition: .2s ease;
+  -o-transition: .2s ease;
+  z-index: -1;
+}
+
+.holder {
+  width: 100%;
+  height: 100%;
+  margin-top: 70px;
 }
 
 .open {
@@ -55,11 +107,16 @@ input {
   background-size: 80%;
   background-position: 50% 1%;
   background-repeat: no-repeat;
-  background-color: #049410;
-  width: 140px;
-  height: 140px;
+  border: 2px solid #fff;
+  border-radius: 50% 50% 25% 25%;
+  -webkit-border-radius: 50% 50% 25% 25%;
+  -moz-border-radius: 50% 50% 25% 25%;
+  -ms-border-radius: 50% 50% 25% 25%;
+  -o-border-radius: 50% 50% 25% 25%;
+  width: 150px;
+  height: 150px;
   position: relative;
-    top: 30%;
+    top: 35%;
     left: 50%;
   transform: translate(-50%,-50%);
   -webkit-transform: translate(-50%,-50%);
@@ -74,21 +131,27 @@ input {
   content: "Sorteio clássico";
   color: #fff;
   position: absolute;
-  bottom: 5px;
+  bottom: 10px;
   left: 0px;
   width: 100%;
 }
 
 #sortegram-raffle {
   background-image: url(../img/logo/white/SG-icon-128.png);
-  background-size: 70%;
+  background-size: 60%;
   background-position: 50%;
   background-repeat: no-repeat;
-  background-color: #00A90E;
-  width: 180px;
+  border: 2px solid #fff;
+  border-radius: 50% 50% 25% 25%;
+  -webkit-border-radius: 50% 50% 25% 25%;
+  -moz-border-radius: 50% 50% 25% 25%;
+  -ms-border-radius: 50% 50% 25% 25%;
+  -o-border-radius: 50% 50% 25% 25%;
+  width: 200px;
+  height: 200px;
   height: 180px;
   position: relative;
-    top: 40%;
+    top: 35%;
     left: 50%;
   transform: translate(-50%,-50%);
   -webkit-transform: translate(-50%,-50%);
@@ -108,29 +171,21 @@ input {
   width: 100%;
 }
 
-#navbar {
-  background-color: transparent;
-  width: 100%;
-  height: 50px;
-  position: absolute;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
 
 #logo {
-  font-size: 24pt;
+    font-size: 24pt;
     font-family: Segoe UI Light, Segoe UI, sans-serif;
-    text-align: right;
+    text-align: center;
     color: #fff;
-    width: 265px;
+    width: calc(100% - 100px);
+    width: -webkit-calc(100% - 100px);
+    width: -moz-calc(100% - 100px);
+    width: -ms-calc(100% - 100px);
+    width: -o-calc(100% - 100px);
     height: 50px;
     position: absolute;
     top: 0;
-    right: 5px;
+    left: 50px;
     transition: 1s ease;
     -webkit-transition: 1s ease;
     -moz-transition: 1s ease;
@@ -207,6 +262,7 @@ input {
   background-size: 100% auto;
   background-position: 50%;
   background-repeat: no-repeat;
+  border: 0;
   width: 50px;
   height: 50px;
   cursor: pointer;
@@ -221,7 +277,7 @@ input {
 #navbar-ops-btn-close {
   display: none;
   background-color: rgba(0, 0, 0, 0.5);
-  background-image: url('../img/appbar.chevron.left-2.png');
+  background-image: url('../img/appbar.close.png');
   background-size: 100% auto;
   background-position: 50%;
   background-repeat: no-repeat;
@@ -239,35 +295,40 @@ input {
 
 #sidebar {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #148000;
   color: #fff;
   width: 50%;
-  height: 100%;
+  height: calc(100% - 50px);
+  height: -webkit-calc(100% - 50px);
+  height: -moz-calc(100% - 50px);
+  height: -ms-calc(100% - 50px);
+  height: -o-calc(100% - 50px);
+  top: 50px;
   box-shadow: 1px 0px 0px #000;
   -webkit-box-shadow: 1px 0px 0px #000;
   -moz-box-shadow: 1px 0px 0px #000;
   -ms-box-shadow: 1px 0px 0px #000;
   -o-box-shadow: 1px 0px 0px #000;
-  transition: .2s ease;
-  -webkit-transition: .2s ease;
-  -moz-transition: .2s ease;
-  -ms-transition: .2s ease;
-  -o-transition: .2s ease;
+  transition: .4s ease;
+  -webkit-transition: .4s ease;
+  -moz-transition: .4s ease;
+  -ms-transition: .4s ease;
+  -o-transition: .4s ease;
   z-index: 0;
 }
 #sidebar-overlay {
   display: none;
-  background-color: rgba(0, 64, 51, 0.7);
+  background-color: rgba(0,0,0,0.8);
   width: 170%;
   height: 100%;
   position: fixed;
-  top: 0;
+  top: 50px;
   left: 0;
   z-index: 0;
 }
 
 .sidebar-ops {
-  margin-top: 50px;
+  margin-top: 10px;
 }
 .sidebar-op {
   transition: .2s ease;
@@ -282,6 +343,53 @@ input {
 .sidebar-op:active {
   background-color: rgba(0, 0, 0, 0.5);
   border-bottom: 1px solid #fff;
+}
+
+.ui-color-picker {
+  transition: .2s ease;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -ms-transition: .2s ease;
+  -o-transition: .2s ease;
+  padding: 15px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.32);
+  cursor: pointer;
+}
+
+.ui-color {
+    width: 30px;
+    height: 30px;
+    border: 2px solid #fff;
+    display: inline-block;
+}
+
+.verde {
+background-color: #148000;
+}
+.azul {
+background-color: #2881FF;
+}
+.vermelho {
+background-color: #FF0000;
+}
+.amarelo {
+background-color: #FFFF00;
+}
+.laranja {
+background-color: #FF8A00;
+}
+.rosa {
+background-color: #FF7CFC;
+}
+.lilas {
+background-color: #C56BFF;
+}
+.ciano {
+background-color: #00EAFF;
+}
+.violeta {
+background-color: #FF00CB;
 }
 
 .splat {
@@ -305,11 +413,11 @@ input {
 
 #classic {
   color: #fff;
-  background-color: rgba(84, 84, 84, 0.7);
+  background-color: transparent;
   width: 100%;
   max-width: 100%;
   min-width: 90%;
-  min-height: 75%;
+  min-height: 100%;
   text-align: center;
   position: absolute;
   top: 0;
@@ -326,11 +434,12 @@ input {
   -moz-transition: .2s ease;
   -ms-transition: .2s ease;
   -o-transition: .2s ease;
+  overflow-y: auto;
   z-index: -1;
 }
 
 #sortegram {
-  background-color: rgba(84,84,84,0.7);
+  background-color: transparent;
   color: #fff;
   width: 100%;
   max-width: 100%;
@@ -346,6 +455,11 @@ input {
   padding: 0px;
   padding-top: 70px;
   transition: .2s ease;
+  box-shadow: 0px 0px 20px #000;
+    -webkit-box-shadow: 0px 0px 20px #000;
+    -moz-box-shadow: 0px 0px 20px #000;
+    -ms-box-shadow: 0px 0px 20px #000;
+    -o-box-shadow: 0px 0px 20px #000;
   -webkit-transition: .2s ease;
   -moz-transition: .2s ease;
   -ms-transition: .2s ease;
@@ -354,7 +468,7 @@ input {
 }
 
 #start-sortegram {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: transparent;
   color: #fff;
   width: 100%;
   max-width: 100%;
@@ -385,15 +499,15 @@ input {
     background-color: rgba(40, 86, 36, 0.8);
     color: #fff;
     font-size: 20px;
-    max-width: 30%;
-    min-width: 30%;
+    max-width: 100px;
+    mwidth: 30%;
     padding: 5px;
     text-align: center;
-    border-radius: 45px;
+    border-radius: 20px;
     -webkit-border-radius: 20px;
-    -moz-border-radius: 45px;
-    -ms-border-radius: 45px;
-    -o-border-radius: 45px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
     border: 2px solid #38D245;
     transition: .2s ease;
     -webkit-transition: .2s ease;
@@ -433,7 +547,7 @@ input {
 .sort-btn:active {
     background-color: #5181AF;
     border: 5px solid #5181AF;
-    color: #D6D6D6;
+    color: #ffffff;
     transform: scale(.9);
     -webkit-transform: scale(.9);
     -moz-transform: scale(.9);
@@ -443,7 +557,7 @@ input {
 .sort-btn:focus {
     background-color: #5181AF;
     border: 5px solid #5181AF;
-    color: #D6D6D6;
+    color: #ffffff;
 }
 .sort-btn:disabled {
     background: #D9D9D9;
@@ -457,9 +571,9 @@ input {
     bottom: 0%;
     left: 0%;
     font-size: 16pt;
-    background-color: #38D245;
+    background-color: #37BD1E;
     color: #fff;
-    border: 5px solid #38D245;
+    border: 5px solid #37BD1E;
     width: 100%;
     transition: .1s ease;
     -webkit-transition: .1s ease;
@@ -471,7 +585,7 @@ input {
 .new-btn:active {
     background-color: #5181AF;
     border: 5px solid #5181AF;
-    color: #D6D6D6;
+    color: #ffffff;
     transform: scale(.9);
     -webkit-transform: scale(.9);
     -moz-transform: scale(.9);
@@ -481,9 +595,47 @@ input {
 .new-btn:focus {
     background-color: #5181AF;
     border: 5px solid #5181AF;
-    color: #D6D6D6;
+    color: #ffffff;
 }
 .new-btn:disabled {
+    background: #D9D9D9;
+    color: rgb(117, 117, 117);
+    text-shadow: 1px 1px 0px #FFF;
+    border: 5px solid transparent;
+}
+
+.back-to-home-btn {
+  position: relative;
+    bottom: 0%;
+    left: 0%;
+    font-size: 16pt;
+    background-color: #005807;
+    color: #fff;
+    border: 5px solid #005807;
+    width: 100%;
+    transition: .1s ease;
+    -webkit-transition: .1s ease;
+    -moz-transition: .1s ease;
+    -ms-transition: .1s ease;
+    -o-transition: .1s ease;
+    outline: none;
+}
+.back-to-home-btn:active {
+    background-color: #5181AF;
+    border: 5px solid #5181AF;
+    color: #ffffff;
+    transform: scale(.9);
+    -webkit-transform: scale(.9);
+    -moz-transform: scale(.9);
+    -ms-transform: scale(.9);
+    -o-transform: scale(.9);
+}
+.back-to-home-btn:focus {
+    background-color: #5181AF;
+    border: 5px solid #5181AF;
+    color: #ffffff;
+}
+.back-to-home-btn:disabled {
     background: #D9D9D9;
     color: rgb(117, 117, 117);
     text-shadow: 1px 1px 0px #FFF;
@@ -503,6 +655,10 @@ input {
   padding: 10px;
   width: 100%;
   max-width: calc(100% - 16px);
+  max-width: -webkit-calc(100% - 16px);
+  max-width: -moz-calc(100% - 16px);
+  max-width: -ms-calc(100% - 16px);
+  max-width: -o-calc(100% - 16px);
   height: auto;
   min-height: 90px;
   border-top: 3px solid #fff;
@@ -516,9 +672,17 @@ input {
   font-size: 30pt;
   text-align: left;
   padding: 10px;
-  padding-left: 90px;
-  width: calc(100% - 90px);;
-  max-width: calc(100% - 90px);
+  margin-left: 80px;
+  width: calc(100% - 105px);
+  width: -webkit-calc(100% - 105px);
+  width: -moz-calc(100% - 105px);
+  width: -ms-calc(100% - 105px);
+  width: -o-calc(100% - 105px);
+  max-width: calc(100% - 105px);
+  max-width: -webkit-calc(100% - 105px);
+  max-width: -moz-calc(100% - 105px);
+  max-width: -ms-calc(100% - 105px);
+  max-width: -o-calc(100% - 105px);
   height: 53px;
   max-height: 76px;
   min-height: 50px;
@@ -645,6 +809,7 @@ input {
 #user-names {
   counter-reset: user-luck-number;
   padding-top: 15px;
+  margin-bottom: 0;
   line-height: .2;
   text-align: left;
   width: 100%;
@@ -719,7 +884,6 @@ input {
   border-bottom: 1px solid #D4D4D4;
   padding-top: 15px;
   padding-left: 4px;
-  width: 98%;
   height: 30px;
   transition: .2s ease;
   -webkit-transition: .2s ease;
@@ -749,20 +913,51 @@ input {
     font-size: 14pt;
 }
 
-#delete-all {
-    font-size: 12pt;
+.edit {
+    font-size: 13pt;
+    text-align: center;
     color: #fff;
     border: 0;
+    background-color: #00B70B;
+    background-image: url(../img/appbar.edit.png);
+    background-size: auto 80%;
+    background-position: 10%;
+    background-repeat: no-repeat;
+    width: 49%;
     height: 60px;
-    width: 45%;
-    background-color: #FF6666;
     transition: .1s ease;
     -webkit-transition: .1s ease;
     -moz-transition: .1s ease;
     -ms-transition: .1s ease;
     -o-transition: .1s ease;
 }
-#delete-all:active {
+.edit:active {
+    background-color: #5181AF;
+    transform: scale(.9);
+    -webkit-transform: scale(.9);
+    -moz-transform: scale(.9);
+    -ms-transform: scale(.9);
+    -o-transform: scale(.9);
+}
+
+#delete-all, .delete {
+    font-size: 12pt;
+    color: #fff;
+    border: 0;
+    height: 60px;
+    width: 49%;
+    background-color: #FF6666;
+    background-image: url(../img/appbar.delete.png);
+    background-size: auto 80%;
+    background-position: 10%;
+    background-repeat: no-repeat;
+    transition: .1s ease;
+    -webkit-transition: .1s ease;
+    -moz-transition: .1s ease;
+    -ms-transition: .1s ease;
+    -o-transition: .1s ease;
+}
+#delete-all:active, .delete:active {
     background-color: #9A3E3E;
     transform: scale(.9);
     -webkit-transform: scale(.9);
@@ -798,17 +993,18 @@ input {
     -o-transform: scale(.9);
 }
 
+
 #sg-save {
     font-size: 13pt;
     text-align: center;
     color: #fff;
     border: 0;
-    background-color: #00B0FF;
+    background-color: #00B70B;
     background-image: url(../img/appbar.save.png);
-    background-size: auto 80%;
-    background-position: 0%;
+    background-size: auto 60%;
+    background-position: 10%;
     background-repeat: no-repeat;
-    width: 45%;
+    width: 49%;
     height: 60px;
     transition: .1s ease;
     -webkit-transition: .1s ease;
@@ -826,18 +1022,22 @@ input {
 }
 
 #sg-done {
-    font-size: 18pt;
-    text-align: center;
-    color: #fff;
     border: 0;
-    background-color: #06D816;
+    background-color: #00B70B;
     background-image: url(../img/ic_arrow_forward_white_24dp_2x.png);
     background-size: auto 80%;
-    background-position: 100%;
+    background-position: 50%;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 60px;
-    margin-top: 10px;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 0 0 0 20px;
+    -webkit-border-radius: 0 0 0 20px;
+    -moz-border-radius: 0 0 0 20px;
+    -ms-border-radius: 0 0 0 20px;
+    -o-border-radius: 0 0 0 20px;
     transition: .1s ease;
     -webkit-transition: .1s ease;
     -moz-transition: .1s ease;
@@ -853,12 +1053,14 @@ input {
     -o-transform: scale(.9);
 }
 
+#sg-save:disabled, #delete-all:disabled {
+    background-color: #BBB;
+}
+
 #trophy {
     display: none;
-    width: 60px;
-    height: 60px;
-    background-color: #A50000;
-    border: 3px solid #FF0000;
+    width: 70px;
+    height: 70px;
     background-image: url(../img/appbar.trophy.svg);
     background-size: auto 125%;
     background-repeat: no-repeat;
@@ -872,6 +1074,51 @@ input {
     margin-left: 5px;
     margin-top: 64px;
 }
+
+#spinner {
+    display: none;
+    width: 60px;
+    height: 60px;
+    border: 3px solid #00FF10;
+    border-bottom: 3px solid transparent;
+    border-left: 3px solid transparent;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    position: absolute;
+    margin-left: 5px;
+    margin-top: 64px;
+    animation: spinner 1s infinite linear;
+    -webkit-animation: spinner 1s infinite linear;
+    -moz-animation: spinner 1s infinite linear;
+    -ms-animation: spinner 1s infinite linear;
+    -o-animation: spinner 1s infinite linear;
+}
+
+@keyframes spinner {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg)}
+}
+@-webkit-keyframes spinner {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg)}
+}
+@-moz-keyframes spinner {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg)}
+}
+@-ms-keyframes spinner {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg)}
+}
+@-o-keyframes spinner {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg)}
+}
+
+
 
 .lock-scroll {
   overflow-y: hidden;
