--- a/css/sortegram.css
+++ b/css/sortegram.css
@@ -8,8 +8,17 @@ body, html {
   -ms-user-select: none;
   -o-user-select: none;
   margin: 0;
-  overflow-x: hidden;
-  max-height: 100%;
+  overflow: hidden;
+  touch-action: none;
+}
+
+#content {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
 
 .preload-images {
@@ -27,12 +36,12 @@ body, html {
               url(../ic_done_white_24dp_1x.png);
 }
 
-input {
+input, button {
   outline: none;
 }
 
 #cover {
-  background-color: #148000;
+  background-color: #FFF;
   background-size: auto 100%;
   background-position: 50%;
   background-repeat: no-repeat;
@@ -69,19 +78,19 @@ input {
   z-index: -1;
 }
 
-#start {
+#manage {
   background-color: transparent;
   width: 100%;
   height: 100%;
   max-width: 100%;
   text-align: center;
   position: fixed;
-  transition: .2s ease;
   box-shadow: 0px 0px 20px #000;
   -webkit-box-shadow: 0px 0px 20px #000;
   -moz-box-shadow: 0px 0px 20px #000;
   -ms-box-shadow: 0px 0px 20px #000;
   -o-box-shadow: 0px 0px 20px #000;
+  transition: .2s ease;
   -webkit-transition: .2s ease;
   -moz-transition: .2s ease;
   -ms-transition: .2s ease;
@@ -90,6 +99,7 @@ input {
 }
 
 .holder {
+  position: fixed;
   width: 100%;
   height: 100%;
   margin-top: 70px;
@@ -103,6 +113,7 @@ input {
 }
 
 #classic-raffle {
+  background-color: rgba(255, 255, 255, 0.3);
   background-image: url(../img/appbar.sort.numeric.png);
   background-size: 80%;
   background-position: 50% 1%;
@@ -124,8 +135,8 @@ input {
   -ms-transform: translate(-50%,-50%);
   -o-transform: translate(-50%,-50%);
 }
-#classic-raffle:active {
-  background-color: #24C331;
+#classic-raffle:active, #classic-raffle:hover {
+  background-color: rgba(0,0,0,0.4);
 }
 #classic-raffle::after {
   content: "Sorteio clássico";
@@ -137,7 +148,8 @@ input {
 }
 
 #sortegram-raffle {
-  background-image: url(../img/logo/white/SG-icon-128.png);
+  background-color: rgba(255, 255, 255, 0.3);
+  background-image: url(../img/logo/white/SG-icon-144.png);
   background-size: 60%;
   background-position: 50%;
   background-repeat: no-repeat;
@@ -159,8 +171,8 @@ input {
   -ms-transform: translate(-50%,-50%);
   -o-transform: translate(-50%,-50%);
 }
-#sortegram-raffle:active {
-  background-color: #24C331;
+#sortegram-raffle:active, #sortegram-raffle:hover {
+  background-color: rgba(0,0,0,0.4);
 }
 #sortegram-raffle::after {
   content: "Sorteio Sortegram";
@@ -183,7 +195,7 @@ input {
     width: -ms-calc(100% - 100px);
     width: -o-calc(100% - 100px);
     height: 50px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 50px;
     transition: 1s ease;
@@ -266,7 +278,7 @@ input {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
@@ -284,7 +296,7 @@ input {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 3;
@@ -294,7 +306,7 @@ input {
 }
 
 #sidebar {
-  position: absolute;
+  position: fixed;
   background-color: #148000;
   color: #fff;
   width: 50%;
@@ -309,11 +321,11 @@ input {
   -moz-box-shadow: 1px 0px 0px #000;
   -ms-box-shadow: 1px 0px 0px #000;
   -o-box-shadow: 1px 0px 0px #000;
-  transition: .4s ease;
-  -webkit-transition: .4s ease;
-  -moz-transition: .4s ease;
-  -ms-transition: .4s ease;
-  -o-transition: .4s ease;
+  transition: .2s ease;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -ms-transition: .2s ease;
+  -o-transition: .2s ease;
   z-index: 0;
 }
 #sidebar-overlay {
@@ -419,7 +431,7 @@ background-color: #FF00CB;
   min-width: 90%;
   min-height: 100%;
   text-align: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   padding: 1px;
   padding-top: 100px;
@@ -449,7 +461,7 @@ background-color: #FF00CB;
   min-height: -ms-calc(100% - 70px);
   min-height: -o-calc(100% - 70px);
   text-align: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   margin-left: 0px;
   padding: 0px;
@@ -478,7 +490,7 @@ background-color: #FF00CB;
   min-height: 100%;
   min-height: 100%;
   text-align: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   transition: .2s ease;
   -webkit-transition: .2s ease;
@@ -496,7 +508,7 @@ background-color: #FF00CB;
 }
 
 .input-min-max {
-    background-color: rgba(40, 86, 36, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
     font-size: 20px;
     max-width: 100px;
@@ -508,7 +520,7 @@ background-color: #FF00CB;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
-    border: 2px solid #38D245;
+    border: 2px solid #FFF;
     transition: .2s ease;
     -webkit-transition: .2s ease;
     -moz-transition: .2s ease;
@@ -521,7 +533,7 @@ background-color: #FF00CB;
     border: 2px solid #FFFFFF;
 }
 .input-min-max:disabled {
-    background-color: rgba(162, 218, 163, 0.8);
+    background-color: rgba(255, 255, 255, 0.6);
     color: #717171;
     border: 2px solid #868686;
 }
@@ -534,7 +546,7 @@ background-color: #FF00CB;
     font-size: 30pt;
     background-color: #38D245;
     color: #fff;
-    border: 5px solid #38D245;
+    border: 0;
     width: 100%;
     padding: 10px;
     transition: .1s ease;
@@ -546,7 +558,6 @@ background-color: #FF00CB;
 }
 .sort-btn:active {
     background-color: #5181AF;
-    border: 5px solid #5181AF;
     color: #ffffff;
     transform: scale(.9);
     -webkit-transform: scale(.9);
@@ -556,14 +567,12 @@ background-color: #FF00CB;
 }
 .sort-btn:focus {
     background-color: #5181AF;
-    border: 5px solid #5181AF;
     color: #ffffff;
 }
 .sort-btn:disabled {
     background: #D9D9D9;
     color: rgb(117, 117, 117);
     text-shadow: 1px 1px 0px #FFF;
-    border: 5px solid transparent;
 }
 
 .new-btn {
@@ -573,7 +582,8 @@ background-color: #FF00CB;
     font-size: 16pt;
     background-color: #37BD1E;
     color: #fff;
-    border: 5px solid #37BD1E;
+    border: 0;
+    padding: 10px;
     width: 100%;
     transition: .1s ease;
     -webkit-transition: .1s ease;
@@ -584,7 +594,6 @@ background-color: #FF00CB;
 }
 .new-btn:active {
     background-color: #5181AF;
-    border: 5px solid #5181AF;
     color: #ffffff;
     transform: scale(.9);
     -webkit-transform: scale(.9);
@@ -594,14 +603,11 @@ background-color: #FF00CB;
 }
 .new-btn:focus {
     background-color: #5181AF;
-    border: 5px solid #5181AF;
     color: #ffffff;
 }
 .new-btn:disabled {
     background: #D9D9D9;
     color: rgb(117, 117, 117);
-    text-shadow: 1px 1px 0px #FFF;
-    border: 5px solid transparent;
 }
 
 .back-to-home-btn {
@@ -659,14 +665,16 @@ background-color: #FF00CB;
   max-width: -moz-calc(100% - 16px);
   max-width: -ms-calc(100% - 16px);
   max-width: -o-calc(100% - 16px);
-  height: auto;
+  height: 170px;
   min-height: 90px;
   border-top: 3px solid #fff;
   border-bottom: 3px solid #fff;
   word-wrap: break-word;
+  overflow-y: auto;
 }
 
 #SSresult {
+  background-color: rgba(0, 0, 0, 0.3);
   margin-top: 60px;
   color: #FFFFFF;
   font-size: 30pt;
@@ -791,7 +799,7 @@ background-color: #FF00CB;
     margin-left: -5px;
   border: 0;
     border-bottom: 4px solid #fff;
-  background-color: rgba(27, 197, 57, 0);
+  background-color: transparent;
     background-image: url(../img/appbar.add.png);
     background-size: 90%;
     background-position: 50%;
@@ -803,7 +811,7 @@ background-color: #FF00CB;
   -o-transition: .1s ease;
 }
 .input-username-btn:active, .input-username-btn:hover {
-  background-color: #1BC539;
+  background-color: rgba(0, 0, 0, 0.3);
   }
 
 #user-names {
@@ -972,6 +980,7 @@ background-color: #FF00CB;
     background-size: 130%;
     background-position: 50%;
     background-repeat: no-repeat;
+    border: 0;
     width: 45px;
     height: 45px;
     position: relative;
@@ -1102,26 +1111,93 @@ background-color: #FF00CB;
   100% {transform: rotate(360deg)}
 }
 @-webkit-keyframes spinner {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg)}
+  0% {-webkit-transform: rotate(0deg);}
+  100% {-webkit-transform: rotate(360deg)}
 }
 @-moz-keyframes spinner {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg)}
+  0% {-moz-transform: rotate(0deg);}
+  100% {-moz-transform: rotate(360deg)}
 }
 @-ms-keyframes spinner {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg)}
+  0% {-ms-transform: rotate(0deg);}
+  100% {-ms-transform: rotate(360deg)}
 }
 @-o-keyframes spinner {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg)}
+  0% {-o-transform: rotate(0deg);}
+  100% {-o-transform: rotate(360deg)}
+}
+
+
+
+.splat-loader {
+    display: none;
+    width: 70%;
+    height: 70%;
+    background-color: #FFF;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+}
+
+.splat-loader-before {
+    width: 100%;
+    height: 100%;
+    background-color: #FFF;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    z-index: 99;
+}
+
+.splat-loader-spinner {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #00FF10;
+    border-bottom: 3px solid transparent;
+    border-left: 3px solid transparent;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    position: absolute;
+    top: calc(50% - 75px);
+    top: -webkit-calc(50% - 75px);
+    top: -moz-calc(50% - 75px);
+    top: -ms-calc(50% - 75px);
+    left: calc(50% - 75px);
+    left: -webkit-calc(50% - 75px);
+    left: -moz-calc(50% - 75px);
+    left: -ms-calc(50% - 75px);
+    animation: loader-spinner 1s infinite linear;
+    -webkit-animation: loader-spinner 1s infinite linear;
+    -moz-animation: loader-spinner 1s infinite linear;
+    -ms-animation: loader-spinner 1s infinite linear;
+}
+
+@keyframes loader-spinner {
+    100% {transform: rotate(360deg)}
+}
+@-webkit-keyframes loader-spinner {
+    100% {-webkit-transform: rotate(360deg)}
+}
+@-moz-keyframes loader-spinner {
+    100% {-moz-transform: rotate(360deg)}
+}
+@-ms-keyframes loader-spinner {
+    100% {-ms-transform: rotate(360deg)}
 }
 
 
 
 .lock-scroll {
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .scroll {
